--- a/webServer/src/main/resources/web/sydney.html
+++ b/webServer/src/main/resources/web/sydney.html
@@ -44,7 +44,7 @@
 						<div class="panel-heading">
 							<h4 class="panel-title">
 								<a data-toggle="collapse" data-parent="#accordion"
-									href="#collapse-date">Select a date</a>
+									href="#collapse-date">Select a date (From 21 April 2015 To 1 June 2015)</a>
 							</h4>
 						</div>
 						<div id="collapse-date" class="panel-collapse collapse">
@@ -62,13 +62,13 @@
 							<ul class="list-group">
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-time-mr')"><span class="badge"
-										id="mr_qty">1951</span> Morning Rush</a></li>
+										id="mr_qty">2535</span> Morning Rush</a></li>
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-time-er')"><span class="badge"
-										id="er_qty">3202</span> Evening Rush</a></li>
+										id="er_qty">4181</span> Evening Rush</a></li>
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-time-op')"><span class="badge"
-										id="op_qty">14197</span> Off Peak</a></li>
+										id="op_qty">19019</span> Off Peak</a></li>
 							</ul>
 						</div>
 					</div>
@@ -83,25 +83,25 @@
 							<ul class="list-group">
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-day-mon')"><span class="badge"
-										id="mon_qty">3034</span> Monday</a></li>
+										id="mon_qty">3732</span> Monday</a></li>
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-day-tue')"><span class="badge"
-										id="tue_qty">2173</span> Tuesday</a></li>
+										id="tue_qty">2819</span> Tuesday</a></li>
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-day-wed')"><span class="badge"
-										id="wed_qty">2576</span> Wednesday</a></li>
+										id="wed_qty">3600</span> Wednesday</a></li>
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-day-thu')"><span class="badge"
-										id="thu_qty">3101</span> Thursday</a></li>
+										id="thu_qty">4080</span> Thursday</a></li>
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-day-fri')"><span class="badge"
-										id="fri_qty">2822</span> Friday</a></li>
+										id="fri_qty">3829</span> Friday</a></li>
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-day-sat')"><span class="badge"
-										id="sat_qty">2976</span> Saturday</a></li>
+										id="sat_qty">4041</span> Saturday</a></li>
 								<li><a class="list-group-item"
 									onclick="sendRequest('smrh-day-sun')"><span class="badge"
-										id="sun_qty">2668</span> Sunday</a></li>
+										id="sun_qty">3634</span> Sunday</a></li>
 							</ul>
 						</div>
 					</div>
@@ -109,44 +109,51 @@
 						<div class="panel-heading">
 							<h4 class="panel-title">
 								<a data-toggle="collapse" data-parent="#accordion"
-									href="#collapse-road">Select a street</a>
+									href="#collapse-road">Select a street (With harvested records over 100)</a>
 							</h4>
 						</div>
 						<div id="collapse-road" class="panel-collapse collapse">
 							<ul class="list-group">
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-anzac_parade')"><span class="badge" id="anzac_parade_qty">322</span>ANZAC PARADE</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-barrenjoey_road')"><span class="badge" id="barrenjoey_road_qty">102</span>BARRENJOEY ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-bradfield_highway')"><span class="badge" id="bradfield_highway_qty">527</span>BRADFIELD HIGHWAY</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-broadway')"><span class="badge" id="broadway_qty">302</span>BROADWAY</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-bunnerong_road')"><span class="badge" id="bunnerong_road_qty">118</span>BUNNERONG ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-cahill_expressway')"><span class="badge" id="cahill_expressway_qty">467</span>CAHILL EXPRESSWAY</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-campbell_parade')"><span class="badge" id="campbell_parade_qty">273</span>CAMPBELL PARADE</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-city_road')"><span class="badge" id="city_road_qty">298</span>CITY ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-cross_city_tunnel')"><span class="badge" id="cross_city_tunnel_qty">928</span>CROSS CITY TUNNEL</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-darling_drive')"><span class="badge" id="darling_drive_qty">108</span>DARLING DRIVE</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-eastern_distributor')"><span class="badge" id="eastern_distributor_qty">276</span>EASTERN DISTRIBUTOR</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-flinders_street')"><span class="badge" id="flinders_street_qty">123</span>FLINDERS STREET</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-general_holmes_drive')"><span class="badge" id="general_holmes_drive_qty">254</span>GENERAL HOLMES DRIVE</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-george_street')"><span class="badge" id="george_street_qty">427</span>GEORGE STREET</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-great_western_highway')"><span class="badge" id="great_western_highway_qty">116</span>GREAT WESTERN HIGHWAY</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-harbour_street')"><span class="badge" id="harbour_street_qty">161</span>HARBOUR STREET</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-hickson_road')"><span class="badge" id="hickson_road_qty">152</span>HICKSON ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-kingsway')"><span class="badge" id="kingsway_qty">255</span>KINGSWAY</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-military_road')"><span class="badge" id="military_road_qty">390</span>MILITARY ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-new_south_head_road')"><span class="badge" id="new_south_head_road_qty">153</span>NEW SOUTH HEAD ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-oxford_street')"><span class="badge" id="oxford_street_qty">1055</span>OXFORD STREET</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-pacific_highway')"><span class="badge" id="pacific_highway_qty">635</span>PACIFIC HIGHWAY</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-pacific_motorway')"><span class="badge" id="pacific_motorway_qty">245</span>PACIFIC MOTORWAY</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-park_street')"><span class="badge" id="park_street_qty">166</span>PARK STREET</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-parramatta_road')"><span class="badge" id="parramatta_road_qty">446</span>PARRAMATTA ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-pennant_hills_road')"><span class="badge" id="pennant_hills_road_qty">191</span>PENNANT HILLS ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-pitt_street')"><span class="badge" id="pitt_street_qty">221</span>PITT STREET</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-pittwater_road')"><span class="badge" id="pittwater_road_qty">497</span>PITTWATER ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-princes_highway')"><span class="badge" id="princes_highway_qty">243</span>PRINCES HIGHWAY</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-sydney_harbour_tunnel')"><span class="badge" id="sydney_harbour_tunnel_qty">495</span>SYDNEY HARBOUR TUNNEL</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-victoria_road')"><span class="badge" id="victoria_road_qty">525</span>VICTORIA ROAD</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-western_distributor')"><span class="badge" id="western_distributor_qty">883</span>WESTERN DISTRIBUTOR</a></li>
-<li><a class="list-group-item" onclick="sendRequest('smrh-road-william_street')"><span class="badge" id="william_street_qty">152</span>WILLIAM STREET</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-anzac_parade')"><span class="badge" id="anzac_parade_qty">402</span>ANZAC PARADE</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-barrenjoey_road')"><span class="badge" id="barrenjoey_road_qty">129</span>BARRENJOEY ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-bradfield_highway')"><span class="badge" id="bradfield_highway_qty">759</span>BRADFIELD HIGHWAY</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-broadway')"><span class="badge" id="broadway_qty">418</span>BROADWAY</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-bunnerong_road')"><span class="badge" id="bunnerong_road_qty">132</span>BUNNERONG ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-cahill_expressway')"><span class="badge" id="cahill_expressway_qty">834</span>CAHILL EXPRESSWAY</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-campbell_parade')"><span class="badge" id="campbell_parade_qty">341</span>CAMPBELL PARADE</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-city_road')"><span class="badge" id="city_road_qty">423</span>CITY ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-cross_city_tunnel')"><span class="badge" id="cross_city_tunnel_qty">1427</span>CROSS CITY TUNNEL</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-darling_drive')"><span class="badge" id="darling_drive_qty">146</span>DARLING DRIVE</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-eastern_distributor')"><span class="badge" id="eastern_distributor_qty">383</span>EASTERN DISTRIBUTOR</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-flinders_street')"><span class="badge" id="flinders_street_qty">183</span>FLINDERS STREET</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-general_holmes_drive')"><span class="badge" id="general_holmes_drive_qty">353</span>GENERAL HOLMES DRIVE</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-george_street')"><span class="badge" id="george_street_qty">553</span>GEORGE STREET</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-great_western_highway')"><span class="badge" id="great_western_highway_qty">142</span>GREAT WESTERN HIGHWAY</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-harbour_street')"><span class="badge" id="harbour_street_qty">205</span>HARBOUR STREET</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-herring_road')"><span class="badge" id="herring_road_qty">118</span>HERRING ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-hickson_road')"><span class="badge" id="hickson_road_qty">273</span>HICKSON ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-kingsway')"><span class="badge" id="kingsway_qty">324</span>KINGSWAY</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-liverpool_street')"><span class="badge" id="liverpool_street_qty">101</span>LIVERPOOL STREET</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-military_road')"><span class="badge" id="military_road_qty">482</span>MILITARY ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-moore_park_road')"><span class="badge" id="moore_park_road_qty">102</span>MOORE PARK ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-new_south_head_road')"><span class="badge" id="new_south_head_road_qty">216</span>NEW SOUTH HEAD ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-old_windsor_road')"><span class="badge" id="old_windsor_road_qty">110</span>OLD WINDSOR ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-oxford_street')"><span class="badge" id="oxford_street_qty">1412</span>OXFORD STREET</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-pacific_highway')"><span class="badge" id="pacific_highway_qty">854</span>PACIFIC HIGHWAY</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-pacific_motorway')"><span class="badge" id="pacific_motorway_qty">337</span>PACIFIC MOTORWAY</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-park_street')"><span class="badge" id="park_street_qty">253</span>PARK STREET</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-parramatta_road')"><span class="badge" id="parramatta_road_qty">584</span>PARRAMATTA ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-pennant_hills_road')"><span class="badge" id="pennant_hills_road_qty">210</span>PENNANT HILLS ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-pitt_street')"><span class="badge" id="pitt_street_qty">269</span>PITT STREET</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-pittwater_road')"><span class="badge" id="pittwater_road_qty">585</span>PITTWATER ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-princes_highway')"><span class="badge" id="princes_highway_qty">315</span>PRINCES HIGHWAY</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-south_dowling_street')"><span class="badge" id="south_dowling_street_qty">126</span>SOUTH DOWLING STREET</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-sydney_harbour_tunnel')"><span class="badge" id="sydney_harbour_tunnel_qty">791</span>SYDNEY HARBOUR TUNNEL</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-victoria_road')"><span class="badge" id="victoria_road_qty">671</span>VICTORIA ROAD</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-warringah_freeway')"><span class="badge" id="warringah_freeway_qty">108</span>WARRINGAH FREEWAY</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-western_distributor')"><span class="badge" id="western_distributor_qty">1079</span>WESTERN DISTRIBUTOR</a></li>
+<li><a class="list-group-item" onclick="sendRequest('smrh-road-william_street')"><span class="badge" id="william_street_qty">296</span>WILLIAM STREET</a></li>
+
 							</ul>
 						</div>
 					</div>
